# template_maker_project

./: README.md
docs/: additional_info.md  resources.md  technical_specs.md  trousbleshooting.md  user_manual.md
hardware/3D_design/: README.md  assembly_instructions.md  design_software.md
hardware/CNC_design/: README.md  desing_sofware.md  manufacturing_guidelines.md  material_specifications.md
hardware/CNC_design/toolpaths/: example.gcode
hardware/electrical-electronic/: Bill_of_materials.md  README.MD  assembly_instructions.md  design_software.md  troubleshooting.md
hardware/electrical-electronic/PCB_design/: README.md
hardware/electrical-electronic/PCB_design/3D_view/: README.md
hardware/electrical-electronic/components/: README.md
hardware/electrical-electronic/diagrams/: README.md
hardware/materials/: README.md
hardware/materials/actuators/: README.md
hardware/materials/actuators/motors/: README.md
hardware/materials/connectors_and_cables/: README.md
hardware/materials/mechanical_pieces/: README.md
hardware/materials/power_supplies/: README.md
hardware/materials/sensors/: README.md
software/C-C++/: .clang-format  .gitignore  README.md  platformio.ini
software/C-C++/include/: README.md  project_config.h
software/C-C++/test/: README.md  test_my_class.cpp  test_utility.cpp
software/ROS/: CMakeLists.txt  README.md  package.xml
software/ROS/install/: README.md
software/ROS/log/: README.md
software/ROS/src/: README.md
software/ROS/src/package_name/: README.md
software/ROS/src/package_name/config/: README.md
software/ROS/src/package_name/include/: README.md
software/ROS/src/package_name/launch/: README.md
software/ROS/src/package_name/msg/: README.md
software/ROS/src/package_name/src/: README.md
software/ROS/src/package_name/srv/: README.md
software/arduino/: README.md
software/arduino/firmware/: README.md
software/arduino/libraries/: README.md
software/python/: CHANGELOG.md  README.md  requirements.txt  setup.py
software/python/class/: MyClass.py  README.md
software/python/docs/: index.md
software/python/modules/: README.md  module1.py
software/python/script/: script1.py
software/python/test/: README.md  test_module1.py
(+11 files in other folders)
